--- a/.env
+++ b/.env
@@ -26,3 +26,7 @@ APP_SECRET=06ebc79c2fd1f94d95654200942a74b4
 # Configure your db driver and server_version in config/packages/doctrine.yaml
 DATABASE_URL=mysql://root:@127.0.0.1:3306/projetorly
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN=^https?://localhost(:[0-9]+)?$
+###< nelmio/cors-bundle ###
